--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link href='styles.css' rel='stylesheet' type='text/css'>	
+  <title>Cookie Recipe</title>
+</head>
   <header>
   <h1>A Simple Chocolate Chip Cookie</h1>
   </header>
-  <img src="cookie.jpg" alt="cookie" style="width:300px;height:228px;">
   <nav>
   <a href="survey.html">Take a Quick Survey<a>
   </nav>
   <h3>Here's a quick little recipe for making delicious chocolate chip cookies for any occasion.</h3>
   <body>
   <p><h3>You will need:</h3></p>
-  <ul>
+  <ul class="supplies">
   	<li> 2 cups flour </li>
   	<li> 1 tsp baking soda </li>
   	<li> 1 pinch of salt </li>
@@ -22,7 +25,7 @@
   	<li> 1 bag of chocolate chips </li>
   </ul>	
   <p><h3>Recipe:</h3></p>
-  <ol>
+  <ol class="instructions">
   	<li> Preheat oven to 375 degrees Fahrenheit. </li>
   	<li> Combine flour, baking soda, and salt in a bowl. </li>
   	<li> Add in butter and sugar and beat until smooth. </li>
